[package]
name = "ansi-to-ratatui"
version = "4.0.2"
authors = ["Slekup <opensource@slekup.com>"]
edition = "2021"
description = "A library to convert ansi color coded text into ratatui::text::Text type from ratatui library"
keywords = ["ansi", "ascii", "tui", "parser"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/slekup/ansi-to-ratatui"

[dependencies]
nom = "7.1"
ratatui = { version = "0.*,>=0.21,<0.27.0", default-features = false }
thiserror = "1.0"
simdutf8 = { version = "0.1", optional = true }
smallvec = { version = "1.10.0", features = ["const_generics"] }

[dev-dependencies]
anyhow = "1.0"
criterion = "0.5"
pretty_assertions = "1.4.0"

[features]
simd = ["dep:simdutf8"]
zero-copy = []
default = ["zero-copy", "simd"]


[[bench]]
name = "parsing"
harness = false

[profile.bench]
debug = true
